fix too wide equation

--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -26,3 +26,6 @@ details{
         border : 3px solid colors.$accent-color;
     }
 }
+.full-x{
+    overflow-x: auto;
+}
